# GPU-CMI

./: CMakeLists.txt  README.md
basic_statistics/: CMakeLists.txt  README.md
basic_statistics/example/: example.cpp
basic_statistics/include/: basic_statistics.h
basic_statistics/src/: basic_statistics.cpp  calculation.cu  cuda_kernel_function.cuh  cuda_parameter.h  cuda_utility.h  interface.cpp
example/: example.cpp
include/: conditional_moment_ineq.h  notation.h
measure_time/: CMakeLists.txt  README.md
measure_time/example/: example.cpp
measure_time/include/: timer.h
measure_time/src/: timer.cpp
src/: bootstrap_multiplier.cpp  conditional_moment_ineq.cpp  cube_instrument.cpp  eigen_notation.h  moment_selection.cpp  quadprog.h  test_statistics.cpp
